<PreferenceScreen xmlns:app="http://schemas.android.com/apk/res-auto">

    <PreferenceCategory
        app:iconSpaceReserved="false"
        app:title="@string/user_header">

        <EditTextPreference
            app:iconSpaceReserved="false"
            app:key="@string/user_name_key"
            app:selectable="false"
            app:title="@string/user_name_title"
            app:useSimpleSummaryProvider="true" />


    </PreferenceCategory>

    <PreferenceCategory
        app:iconSpaceReserved="false"
        app:title="@string/remind_header">

        <SwitchPreferenceCompat
            app:iconSpaceReserved="false"
            app:key="@string/need_remind_key"
            app:summary="@string/remind_summary"
            app:title="@string/need_remind_tittle" />

        <com.example.embedded.MyComponent.TimePickerPreference
            app:dependency="@string/need_remind_key"
            app:dialogTitle="@string/remind_time_title"
            app:iconSpaceReserved="false"
            app:key="@string/remind_time_key"
            app:title="@string/remind_time_title" />

    </PreferenceCategory>
    <Preference
        app:key="@string/log_out_key"
        app:layout="@layout/log_out_btn" />


</PreferenceScreen>
