<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="16dp"
    tools:context=".MainActivity">

    <TextView
        android:id="@+id/tvName"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginBottom="16dp"
        android:gravity="end"
        android:text="@string/name"
        android:textSize="22sp"
        app:layout_constraintBottom_toTopOf="@+id/tvAccount"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/textView"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.3"
        app:layout_constraintVertical_chainStyle="packed" />

    <EditText
        android:id="@+id/etTemperature"
        style="?android:attr/textViewStyle"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginBottom="16dp"
        android:background="@null"
        android:ems="10"
        android:gravity="end"
        android:hint="@string/temperature"
        android:inputType="numberDecimal"
        android:textSize="22sp"
        app:layout_constraintBottom_toTopOf="@+id/ctvAroundInjection"
        app:layout_constraintEnd_toStartOf="@+id/tvTemperatureUnit"
        app:layout_constraintStart_toEndOf="@+id/textView4"
        app:layout_constraintTop_toBottomOf="@+id/tvLocation" />

    <TextView
        android:id="@+id/tvLocation"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginBottom="16dp"
        android:gravity="end"
        android:text="@string/location"
        android:textSize="22sp"
        app:layout_constraintBottom_toTopOf="@+id/etTemperature"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/textView3"
        app:layout_constraintTop_toBottomOf="@+id/tvAccount" />

    <CheckedTextView
        android:id="@+id/ctvAroundInjection"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:checkMark="?android:attr/listChoiceIndicatorSingle"
        android:clickable="true"
        android:focusable="true"
        android:text="@string/have_infections_nearby"
        android:textSize="22sp"
        app:layout_constraintBottom_toTopOf="@+id/guideline"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/etTemperature" />

    <TextView
        android:id="@+id/tvAccount"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginBottom="16dp"
        android:gravity="end"
        android:text="@string/account"
        android:textSize="22sp"
        app:layout_constraintBottom_toTopOf="@+id/tvLocation"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/textView2"
        app:layout_constraintTop_toBottomOf="@+id/tvName" />

    <TextView
        android:id="@+id/tvTemperatureUnit"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/temperature_unit"
        android:textSize="22sp"
        app:layout_constraintBaseline_toBaselineOf="@+id/etTemperature"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/etTemperature" />

    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/name_label"
        android:textSize="22sp"
        app:layout_constraintBaseline_toBaselineOf="@+id/tvName"
        app:layout_constraintEnd_toStartOf="@+id/tvName"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/textView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/account_label"
        android:textSize="22sp"
        app:layout_constraintBaseline_toBaselineOf="@+id/tvAccount"
        app:layout_constraintEnd_toStartOf="@+id/tvAccount"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/textView3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/location_label"
        android:textSize="22sp"
        app:layout_constraintBaseline_toBaselineOf="@+id/tvLocation"
        app:layout_constraintEnd_toStartOf="@+id/tvLocation"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/textView4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:hint="@string/temperature_label"
        android:textSize="22sp"
        app:layout_constraintBaseline_toBaselineOf="@+id/etTemperature"
        app:layout_constraintEnd_toStartOf="@+id/etTemperature"
        app:layout_constraintStart_toStartOf="parent" />

    <Button
        android:id="@+id/btn_submit"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:enabled="false"
        android:text="@string/submit"
        android:textSize="22sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/guideline" />

    <ProgressBar
        android:id="@+id/progressBar"
        style="?android:attr/progressBarStyle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:visibility="gone"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.8" />
</androidx.constraintlayout.widget.ConstraintLayout>